--- a/package.json
+++ b/package.json
@@ -1,21 +1,44 @@
 {
-  "name": "trcapp",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~52.0.18",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+  "expo": {
+    "name": "trcapp",
+    "slug": "trcapp",
+    "version": "1.0.0",
+    "platforms": ["ios", "android", "web"],
+    "main": "index.js",
+    "scripts": {
+      "start": "expo start",
+      "android": "expo start --android",
+      "ios": "expo start --ios",
+      "web": "expo start --web"
+    },
+    "dependencies": {
+      "@react-google-maps/api": "^2.20.5",
+      "@react-native-community/checkbox": "^0.5.17",
+      "@react-navigation/native-stack": "^7.2.0",
+      "expo": "~52.0.18",
+      "expo-image-picker": "~16.0.3",
+      "expo-location": "~18.0.4",
+      "expo-mail-composer": "~14.0.1",
+      "expo-status-bar": "~2.0.0",
+      "react": "18.3.1",
+      "react-native": "0.76.5",
+      "react-native-calendars": "^1.1307.0",
+      "react-native-image-picker": "^7.2.3",
+      "react-native-maps": "1.18.0",
+      "react-native-web": "~0.19.13"
+    },
+    "devDependencies": {
+      "@babel/core": "^7.20.0"
+    },
+    "private": true,
+    "web": {
+      "build": {
+        "babel": {
+          "preset": ["babel-preset-expo"]
+        }
+      }
+    }
+  }
 }
+
+
