--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "expo": {
-    "name": "trcapp",
-    "slug": "trcapp",
-    "version": "1.0.0",
-    "platforms": ["ios", "android", "web"],
-    "main": "index.js",
-    "scripts": {
-      "start": "expo start",
-      "android": "expo start --android",
-      "ios": "expo start --ios",
-      "web": "expo start --web"
-    },
-    "dependencies": {
-      "@react-google-maps/api": "^2.20.5",
-      "@react-native-community/checkbox": "^0.5.17",
-      "@react-navigation/native-stack": "^7.2.0",
-      "expo": "~52.0.18",
-      "expo-image-picker": "~16.0.3",
-      "expo-location": "~18.0.4",
-      "expo-mail-composer": "~14.0.1",
-      "expo-status-bar": "~2.0.0",
-      "react": "18.3.1",
-      "react-native": "0.76.5",
-      "react-native-calendars": "^1.1307.0",
-      "react-native-image-picker": "^7.2.3",
-      "react-native-maps": "1.18.0",
-      "react-native-web": "~0.19.13"
-    },
-    "devDependencies": {
-      "@babel/core": "^7.20.0"
-    },
-    "private": true,
-    "web": {
-      "build": {
-        "babel": {
-          "preset": ["babel-preset-expo"]
-        }
-      }
-    }
-  }
+  "name": "trcapp",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
+  },
+  "dependencies": {
+    "@expo/webpack-config": "^19.0.1",
+    "@react-google-maps/api": "^2.20.5",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/cli": "^15.1.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.1.1",
+    "cors": "^2.8.5",
+    "expo": "~52.0.0",
+    "expo-image-picker": "~16.0.5",
+    "expo-location": "~18.0.5",
+    "expo-mail-composer": "~14.0.2",
+    "expo-status-bar": "~2.0.1",
+    "mysql2": "^3.12.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.7",
+    "react-native-calendars": "^1.1308.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "^0.19.13"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
-
-
